minor changes in numbers.

--- a/numbers/errors.ipynb
+++ b/numbers/errors.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "---\n",
     "\n",
-    "**Example 1.5.1** \n",
+    "**Example 1.5.1**:  Bohr radius \n",
     "\n",
     "Let us evaluate the Bohr radius (the radius of a hydrogen atom) in SI units.\n",
     "    \n",
@@ -196,28 +196,9 @@
    "id": "349f7792-7659-481e-8090-4232547a7a3c",
    "metadata": {},
    "source": [
-    "Notice that $1+\\epsilon$ shows $2$ at the last figure.  Only the first figure of the machine epsilon survived in $1+\\epsilon$ and there is no room for the remaining part of the machine epsilon.   In $1+\\epsilon/2$, we don't see any part of $\\epsinlon$.  \n",
-    "In fact, $1 + \\epsilon/2 + \\epsilon/2$ is not $1+\\epsilon$ but $1$.  Check it out."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "cd02b395-ac6d-442f-95b8-08c2989b97ca",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(1.0+e/2.0 + e/2.0)"
+    "Notice that $1+\\epsilon$ shows $2$ at the last figure.  Only the first figure of the machine epsilon appeared and there is no room for the remaining part of $\\epsilon$.  Notice that $1+\\epsilon/2$ outputs exactly 1.0. Adding $\\epsilon/2$ does nothing. \n",
+    "\n",
+    "*Exercise* Compute $1 + \\epsilon/2 + \\epsilon/2$.  The answer is not $1+\\epsilon$.  You will get 1.0.  Why?"
    ]
   },
   {
@@ -227,7 +208,7 @@
    "source": [
     "---\n",
     "\n",
-    "**Example 1.5.2** 7/3-4/3-1 = ?\n",
+    "**Example 1.5.2**:  7/3-4/3-1 = ?\n",
     "\n",
     "Consider simple calculations $a=\\displaystyle\\frac{5}{3}-\\frac{2}{3}-1$ and $b=\\displaystyle\\frac{7}{3}-\\frac{4}{3}-1$.  You can easily find that both are exactly zero.  However, computers don't think so.  The former vanishes as expected but the latter equals to the machine epsilon."
    ]
