added problem section in chapter 1

--- a/references/references.bib
+++ b/references/references.bib
@@ -16,4 +16,37 @@
   isbn      = {97815173000074},
 }
 
+@Book{Widrow2008,
+  author    = {Widrow, Bernard and Koll\'{a}r, Istv\'{a}n},
+  publisher = {Cambridge University Press},
+  title     = {Quantization Noise: Roundoff Error in Digital Computation, Signal Processing, Control, and Communications},
+  year      = {2008},
+}
+
+@Book{Griffiths2005,
+  author    = {Griffiths, David},
+  publisher = {Pearson Prentice Hall},
+  title     = {Introduction to Quantum Mechanics},
+  year      = {2005},
+  edition   = {2nd},
+}
+
+@Book{Zwillinger2012,
+  Title                    = {CRC Stanbdard Mathematical Tables and Formula},
+  Author                   = {Zwillinger, Daniel},
+  Publisher                = {CRC Press},
+  Year                     = {2012},
+  Edition                  = {35th}
+}
+
+@Article{Goldberg1991,
+  Title                    = {What Every Computer Scientist Should Know About Floating Point Arithmetic},
+  Author                   = {David Goldberg},
+  Journal                  = {ACM Computing Surveys},
+  Year                     = {1991},
+  Number                   = {1},
+  Pages                    = {5--48},
+  Volume                   = {23}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
