second order derivative

--- a/references/references.bib
+++ b/references/references.bib
@@ -49,4 +49,21 @@
   Volume                   = {23}
 }
 
+@Book{Boas2006,
+  Title                    = {Mathematical Methods in the Physical Sciences},
+  Author                   = {Boas, Mary L.},
+  Publisher                = {Wiley},
+  Year                     = {2006},
+  Edition                  = {3rd}
+}
+
+@Book{Stewart2012,
+  author    = {Stewart, James},
+  publisher = {Cengage Learning},
+  title     = {Essential Calculus},
+  year      = {2012},
+  edition   = {2nd},
+  note      = {Section 3.2},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
