minor error fix

--- a/references/references.bib
+++ b/references/references.bib
@@ -66,4 +66,12 @@
   note      = {Section 3.2},
 }
 
+@Book{Abramowitz1970,
+  author    = {Abramowitz, Milton and Stegun, Irene A.},
+  publisher = {Dover Publications},
+  title     = {Handbook of Mathematical Functions with Formulas, Graphs, and Mathematical Tables},
+  year      = {1970},
+  note      = {Table 25.2},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
