references added in Fermi-Dirac integral

--- a/references/references.bib
+++ b/references/references.bib
@@ -74,4 +74,22 @@
   note      = {Table 25.2},
 }
 
+@Book{Pathria2021,
+  author    = {Pathria, R. K. and Beale, P. D.},
+  publisher = {Academic Press},
+  title     = {Statistical Mechanics},
+  year      = {2021},
+  edition   = {4th},
+  isbn      = {978-0081026922},
+}
+
+@Book{Blundell2009,
+  author    = {Blundell, S. J. and Blundell, K. M.},
+  publisher = {Oxford University Oress},
+  title     = {Concepts in Thermal Phyisics},
+  year      = {2009},
+  edition   = {2nd},
+  isbn      = {978-0199562107},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
