hydrogen atom is added

--- a/references/references.bib
+++ b/references/references.bib
@@ -92,4 +92,13 @@
   isbn      = {978-0199562107},
 }
 
+@Book{Sakurai2020,
+  author    = {Sakurai, J. J. and Napolitano, J.},
+  publisher = {Cambridge University Press},
+  title     = {Modern Quantum Mechanics},
+  year      = {2020},
+  edition   = {3rd},
+  isbn      = {978-1108473224},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
