ch. 2 applications splitted to separate pages.

--- a/references/references.bib
+++ b/references/references.bib
@@ -23,12 +23,13 @@
   year      = {2008},
 }
 
-@Book{Griffiths2005,
+@Book{Griffiths2018,
   author    = {Griffiths, David},
-  publisher = {Pearson Prentice Hall},
+  publisher = {Cambridge University Press},
   title     = {Introduction to Quantum Mechanics},
-  year      = {2005},
-  edition   = {2nd},
+  year      = {2018},
+  edition   = {3rd},
+  isbn      = {978-1107189638},
 }
 
 @Book{Zwillinger2012,
@@ -99,6 +100,15 @@
   year      = {2020},
   edition   = {3rd},
   isbn      = {978-1108473224},
+}
+
+@Book{Ballentine2014,
+  author    = {Ballentine, L. E.},
+  publisher = {World Scientific},
+  title     = {Quantum Mechanics - A Modern Development},
+  year      = {2014},
+  edition   = {2nd},
+  isbn      = {978-9814578578},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
