overdamped is added

--- a/references/references.bib
+++ b/references/references.bib
@@ -111,4 +111,13 @@
   isbn      = {978-9814578578},
 }
 
+@Book{Strogatz2024,
+  author    = {Strogatz, S. H.},
+  publisher = {Chapman and Hall/CRC},
+  title     = {Nonlinear Dynamics and Chaos},
+  year      = {2024},
+  edition   = {3rd},
+  isbn      = {978-0367026509},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
