--- a/numbers/applications.ipynb
+++ b/numbers/applications.ipynb
@@ -14,6 +14,7 @@
    "id": "0eab45e7-6b45-40fc-9d57-629fc450c455",
    "metadata": {},
    "source": [
+    "(sec_roots_quadratic)=\n",
     "## Roots of quadratic equations\n",
     "\n",
     "Many physics applications such as molecular dynamics simulation need to solve quadratic equations: \n",
@@ -189,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
