added brent method

--- a/root-finding/root_newton.ipynb
+++ b/root-finding/root_newton.ipynb
@@ -11,10 +11,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc397f2c-f45e-4fca-b241-78f348d22e8b",
+   "metadata": {},
+   "source": [
+    "The key step of iterative methods is how to propose a new candidate of root based on the previous candidates.  The derivative of the function provides can be a good resource to construct the  next candidate. Suppose that the $n$-th candidate $x_n$ was not good enough. What informnation can be used  to propose a new candidate?  The slope of the function should provide a useful information.  The Neton-Raphson and secant methods, both utilize the derivative function to propose a better candidate,."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aad80fc4-07f3-440a-a947-4084b5318e54",
    "metadata": {},
    "source": [
-    "The key step of iterative methods is how to propose a new candidate of root based on the previous candidates.  The derivative of the function provides can be a good resource to construct the  next candidate. Suppose that the $n$-th candidate $x_n$ was not good enough.  \n",
+    "## Newton-Raphson method\n",
+    "\n",
     "We approximate the function using Taylor expansion around $x_n$ as follows:\n",
     "\n",
     "$$\n",
@@ -30,7 +39,7 @@
     "The root of this equation is the next candidate, that is\n",
     "\n",
     "$$\n",
-    "x_(n+1) = x_n - \\frac{f(x_n)}{f'(x_n)}\n",
+    "x_{n+1} = x_n - \\frac{f(x_n)}{f'(x_n)}\n",
     "$$(eq-newton-raphson)\n",
     "\n",
     "which should be closer to the root than $x_n$ as Fig. {numref}`fig-newton-raphson` illustrate.  Repeating this procedure, $x_n$ approaches the root rather quickly.\n",
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "15573b3e-4fba-410c-bfbd-a847ff5ab51a",
    "metadata": {},
    "outputs": [
@@ -138,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "ea4f2638-1679-4dec-bad4-1f1dc2e5417a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.AxLine at 0x7f642ab1c610>"
+       "<matplotlib.lines.AxLine at 0x7f716d88a290>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -194,10 +203,114 @@
   },
   {
    "cell_type": "markdown",
+   "id": "55c5e121-6ea6-419c-a176-56105207db22",
+   "metadata": {},
+   "source": [
+    "## Secant Method\n",
+    "\n",
+    "The Newton-Raphson method requires the analytic expression of the first order derivative, which limits the range of applications. However, the same idea can be used without the analytic expression.  If we replace the analytic derivative with the numerical derivative (see Chapter {numref}`chap_derivative` ), the Newton-Raphson procedure still works.  Using the backward finite difference method, the recursive equation {eq}`eq-newton-raphson` becomes\n",
+    "\n",
+    "$$\n",
+    "x_{n+1} = x_n - \\frac{x_{n}-x_{n-1}}{f(x_n)-f(x_{n-1})} f(x_n)\n",
+    "$$\n",
+    "\n",
+    "This method is commonly known as the secant method. Use the bisection method before starting the secant method to ensure the convergence.\n",
+    "\n",
+    "One problem is that this method needs two points to start the iteration. However, this is not a big issue since we can pick any point close to the initial guess. If the root is already bracketed between $a$ and $b$, use $x_1 = x_0 + \\Delta$ with $\\Delta \\ll b-a$. If the secant method is preceded by the bisection method, use the final bracket from the bisection calculation.  Then, $\\Delta = (b-a)/10$ is good enough."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "243ba5c1-c85a-45e4-beca-381cc959016a",
+   "metadata": {},
+   "source": [
+    "```{admonition} Algorithm: Secant\n",
+    "1. Set a tolerance $xtol$ or $ftol$. \n",
+    "2. Choose two initial points $x_0$ and $x_1 = x_0 + \\delta$.\n",
+    "3. Reset thne counter $n=1$\n",
+    "4. Estimate a new candidate by $x_{n+1} = x_n - \\displaystyle\\frac{x_n-x_{n-1}}{f(x_n)-f(x_{n-1})} f(x_n)$.\n",
+    "5. If $|x_{n+1}-x_n| < xtol$ and/or $f(x_{n+1}) < ftol$, then $x_{n+1}$ is the root.  Stop the iteration.\n",
+    "6. Otherwise, increment $n$ and go to step 4.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d8b1fe9-7eb9-409c-b2e4-fe652faa60da",
+   "metadata": {},
+   "source": [
+    "**Example**  We solve $x^3 - 9 x^2 +23 x - 15=0$ one more time but with the secant method this time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4d63891b-cec3-485c-889d-f3e82b0ba751",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root= 5.0000000e+00, f(x)= -1.61861635e-11, iteration=   8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def f(x):\n",
+    "    return x**3-9*x**2+23*x-15\n",
+    "\n",
+    "# set tolerance\n",
+    "ftol = 1.e-8\n",
+    "\n",
+    "# set the initial candidate\n",
+    "x1 = 4.0\n",
+    "x2 = 4.1\n",
+    "\n",
+    "# set the maximum iteration\n",
+    "nmax = 100\n",
+    "\n",
+    "f1 = f(x1)\n",
+    "f2 = f(x2)\n",
+    "\n",
+    "n = 0\n",
+    "while abs(f2)> ftol and n<nmax:\n",
+    "    x = x2 - (x2-x1)/(f2-f1)*f2\n",
+    "    x1 = x2\n",
+    "    f1 = f2\n",
+    "    x2 = x\n",
+    "    f2 = f(x)\n",
+    "    n+=1\n",
+    "\n",
+    "print(\"root= {0:10.7e}, f(x)= {1:15.8e}, iteration= {2:3d}\".format(x2, f2, n))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "198ad207-b3b5-4e36-86d4-739eeb8c2f5d",
+   "metadata": {},
+   "source": [
+    "Notice that the secant method found a root nearest to the pair of the initial points."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59b65d3f-a623-4355-983c-b96df768551f",
+   "metadata": {},
+   "source": [
+    "## Advanced Methods\n",
+    "\n",
+    "The secant method has various weakness, namely it is not guaranteed to converge.  For example, if it happens that $f(x_n) = 0$ or very close to 0, the iteration cannot continue.  To overcome this difficulty, a hybrid method combining the bisection method and the secant method, which called the [Brent method](https://en.wikipedia.org/wiki/Brent%27s_method), or Brent-Dekker method.  We do not discuss the method in this lecture.  In the following section, a canned routine of Brent method is shown."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d62f7623-160a-4bed-91d2-2cde9706783a",
    "metadata": {},
    "source": [
-    "## Canned routine\n",
+    "## Canned routines\n",
     "\n",
     "Now we know the pros and cons of the Newton-Raphson method.  So, we use canned routines carefully. `scipy.optimize` provides `newton`.  See the [usage](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.newton.html)."
    ]
@@ -212,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "5b6d4b8f-832f-4ea8-b544-fe4274708aff",
    "metadata": {},
    "outputs": [
@@ -222,12 +335,14 @@
        "0.9999999999999993"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Solves x**3-9*x**2+23*x-15=0 by the Newton-Raphson method\n",
+    "\n",
     "import numpy as np\n",
     "from scipy.optimize import newton\n",
     "\n",
@@ -246,13 +361,102 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c834e047-9d69-4293-aaaf-8902be9f7313",
+   "metadata": {},
+   "source": [
+    "You don't see the secant method in `scipy.optimize`.  Actually, there is but hidden in `newton`.  If the option `fprime=` is not specified, it automatically uses the secant method.  It does not require the second initial position.  The routine will generate the second point automatically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8782583a-b6bb-4a31-b589-e0a349ca7e92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solves x**3-9*x**2+23*x-15=0 by the secant method\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy.optimize import newton\n",
+    "\n",
+    "def f(x):\n",
+    "    return x**3-9*x**2+23*x-15\n",
+    "\n",
+    "x0 = 4.1\n",
+    "xtol=1e-6\n",
+    "\n",
+    "# if 'fprime=' option is not used,\n",
+    "# 'newton' uses the secant method.\n",
+    "newton(f, x0,tol=xtol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01a19506-ef20-4be5-b274-88e48884c716",
+   "metadata": {},
+   "source": [
+    "Notice again that a different root from the Newtow-Raphson is obtained,  which is the nearest to the initial position."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cdea223-90d6-4a42-936f-cd81bd05fbe6",
+   "metadata": {},
+   "source": [
+    "The Brent method is also provided by `scipy.optimize.brentq`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6b570d7e-8daf-4820-9ffb-0efb1d6f665d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.999999999999995"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Solves x**3-9*x**2+23*x-15=0 by the Brent method\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy.optimize import brentq\n",
+    "\n",
+    "def f(x):\n",
+    "    return x**3-9*x**2+23*x-15\n",
+    "    \n",
+    "# The initial braket is taken from the previouse section.\n",
+    "x1=2.50656e+00\n",
+    "x2=3.16192e+00\n",
+    "\n",
+    "brentq(f,x1,x2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2f2ccc52-0605-4aef-97c2-11432d6ba62e",
    "metadata": {},
    "source": [
+    "\n",
     "___\n",
     "\n",
-    "Last modified on 3/12/2024 by R. Kawai"
+    "Last modified on 3/13/2024 by R. Kawai"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59f3e91a-5658-4c7b-b2a0-751512a2aa8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -271,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
