--- a/references/references.bib
+++ b/references/references.bib
@@ -127,4 +127,20 @@
   year      = {2004},
 }
 
+@Article{Konowalow1969,
+  author   = {Konowalow, Daniel D.},
+  journal  = {The Journal of Chemical Physics},
+  title    = {{Interatomic Potentials for HeNe, HeAr, and NeAr}},
+  year     = {1969},
+  issn     = {0021-9606},
+  month    = {01},
+  number   = {1},
+  pages    = {12-16},
+  volume   = {50},
+  abstract = {{Semiempirical potentials for HeNe, HeAr, and NeAr are determined according to Nesbet's scheme from Hartree–Fock (H–F) repulsions and the experimental Boyle temperature in terms of the (exp‐6) and Morse models. For the Morse model, the agreement with potentials determined entirely from experimental data is within about 10\\%; it is poorer for the (exp‐6) model. However, both models afford poor agreement with the theoretical − C6r−6 dispersion attraction. Hybrid model potentials, constructed by equating the H–F repulsion with the repulsive term of the model potential and requiring a first‐order contact with the theoretical dispersion, have much too shallow a well. Possible means for obtaining improved hybrids are explored.}},
+  doi      = {10.1063/1.1670768},
+  eprint   = {https://pubs.aip.org/aip/jcp/article-pdf/50/1/12/18860649/12\_1\_online.pdf},
+  url      = {https://doi.org/10.1063/1.1670768},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
