--- a/references/references.bib
+++ b/references/references.bib
@@ -143,4 +143,12 @@
   url      = {https://doi.org/10.1063/1.1670768},
 }
 
+@Book{Goldstein2001,
+  author    = {Goldstein, H.},
+  publisher = {Pearson},
+  title     = {Classical Mechanics},
+  year      = {2001},
+  edition   = {3rd},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
