classical oscillation is conpleted.

--- a/references/references.bib
+++ b/references/references.bib
@@ -151,4 +151,30 @@
   edition   = {3rd},
 }
 
+@Article{DeMarcus1978,
+  author   = {DeMarcus, W. C.},
+  journal  = {American Journal of Physics},
+  title    = {{Classical motion of a Morse oscillator}},
+  year     = {1978},
+  issn     = {0002-9505},
+  month    = {07},
+  number   = {7},
+  pages    = {733-734},
+  volume   = {46},
+  abstract = {{The exact solution for a particle undergoing one‐dimensional vibrations subject to the Morse potential is found in elementary terms. Thus an interesting and realistic nonlinear vibrator is available to check approximate methods in the teaching of dynamics or to demonstrate quantal properties of vibrating molecules via the correspondence principle since the exact Fourier series for the bound motion is also obtained.}},
+  doi      = {10.1119/1.11110},
+  eprint   = {https://pubs.aip.org/aapt/ajp/article-pdf/46/7/733/11661442/733\_1\_online.pdf},
+  url      = {https://doi.org/10.1119/1.11110},
+}
+
+@Article{Astapenko2022,
+  author  = {Astapenko, V. and Mutafyan, M.},
+  journal = {BiomedJ Sci & Tech Res},
+  title   = {The Morse Oscillator’s Free Motion as the One-Dimensional Analogue for the Kepler Problem},
+  year    = {2022},
+  pages   = {38053},
+  volume  = {47},
+  doi     = {10.26717/BJSTR.2022.47.007440 PDF},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
