--- a/fft/dft.ipynb
+++ b/fft/dft.ipynb
@@ -13,15 +13,15 @@
    "id": "807c34b2-f08c-4531-84a4-b63bdd91771e",
    "metadata": {},
    "source": [
-    "If we want to know $\\tilde{f}(\\omega)$ just for a particular value of $\\omega$, the transformation (\\ref{eq:fourier_fwd}) is simply an improper integral and thus the numerical methods we studied in {numref}`sec:unbound-interval` is sufficient.  In general that is not what we want.  We want to know the function $\\tilde{f}(\\omega)$ for $-\\infty < \\omega <\\infty$. That is a big challenge for digital computers. First of all, the variables $t$ and $\\omega$ are continous, which digital computer cannot handle and thus they must be digitized as we did in all previous chapters, If  $t$ is discretized with $N$ points and $\\omega$ with $M$ points, the transformation needs the order of $N M$ operations.  In a three-dimensional space, $N$ can be easily $1 \\times 10^{6}$.  $M$ is also in the similar order.  Hence, the number of operations can be huge.  Fortunately, there is an ingenious algorithm called fast fourier tranform or FFT.  But before going to FFT,  we need to express Fourier transform in a discrete form known as discrete Fourier transform.   The algorithm of FFT will be explained in next section.\n",
+    "If we want to know $\\tilde{f}(\\omega)$ just for a particular value of $\\omega$, the transformation (\\ref{eq:fourier_fwd}) is simply an improper integral and thus the numerical methods we studied in {numref}`sec:unbound-interval` is sufficient.  In general that is not what we want.  We want to know the function $\\tilde{f}(\\omega)$ for $-\\infty < \\omega <\\infty$. That is a big challenge for digital computers. First of all, the variables $t$ and $\\omega$ are continuous, which digital computer cannot handle and thus they must be digitized as we did in all previous chapters, If  $t$ is discretized with $N$ points and $\\omega$ with $M$ points, the transformation needs the order of $N M$ operations.  In a three-dimensional space, $N$ can be easily $1 \\times 10^{6}$.  $M$ is also in the similar order.  Hence, the number of operations can be huge.  Fortunately, there is an ingenious algorithm called fast fourier tranform or FFT.  But before going to FFT,  we need to express Fourier transform in a discrete form known as discrete Fourier transform.   The algorithm of FFT will be explained in next section.\n",
     "\n",
-    "First, we need to replace the infinite integration interval $(-\\infty, +\\infty)$ in Eq. {eq}`eq:fourier_fwd` with $[-T/2,+T/2]$ where $T>0$ is assumed to be sufficiently large so that $f(t)\\approx 0$ for $|t|\\ge T/2$.  Second, we introduce discrete time $t_n = n \\Delta t$ ($n=-N/2, \\cdots, N/2$) where $\\Delta t=T/N$.  Then, the transform {eq}`{eq:fourier_fwd` is replaced with a summation\n",
+    "First, we need to replace the infinite integration interval $(-\\infty, +\\infty)$ in Eq. {eq}`eq:fourier_fwd` with $[-T/2,+T/2]$ where $T>0$ is assumed to be sufficiently large so that $f(t)\\approx 0$ for $|t|\\ge T/2$.  Second, we introduce discrete time $t_n = n \\Delta t$ ($n=-N/2, \\cdots, N/2$) where $\\Delta t=T/N$.  Then, the transform {eq}`eq:fourier_fwd` is replaced with a summation\n",
     "\n",
     "$$\n",
-    "\\tilde{f}(\\omega) = \\sum_{n=-N/2}^{N/2-1} f(t_n)\\, \\me^{i n  \\omega \\Delta t} \\, \\Delta t\\,.\n",
+    "\\tilde{f}(\\omega) = \\sum_{n=-N/2}^{N/2-1} f(t_n)\\, e^{i n  \\omega \\Delta t} \\, \\Delta t\\,.\n",
     "$$(eq:DFT_fwd)\n",
     "\n",
-    "Here we use the trapezoidal rule for numerical integration (see Chapter {numref}`ch:integral`).\\footnote{It looks like the rectangular rule but recall that when $f(-T/2)=f(T/2)=0$, the rectangular rule is identical to trapezoidal rule.} Since we have chosen $T$ so that $f(-T/2)=f(T/2) \\approx 0$, the rectangula rule is OK provided that $\\Delta t$ is small enough.  Note that there are $N+1$ sampling points of $t$ but only $N$ rectangles to sum up.  That is why the upper limit of the summation is $N/2-1$.\n",
+    "Here we use the trapezoidal rule for numerical integration (see Chapter {numref}`ch:integral`).\\footnote{It looks like the rectangular rule but recall that when $f(-T/2)=f(T/2)=0$, the rectangular rule is identical to trapezoidal rule.} Since we have chosen $T$ so that $f(-T/2)=f(T/2) \\approx 0$, the rectangular rule is OK provided that $\\Delta t$ is small enough.  Note that there are $N+1$ sampling points of $t$ but only $N$ rectangles to sum up.  That is why the upper limit of the summation is $N/2-1$.\n",
     "We need to do the same for $\\omega$.  Introducing the integration interval $[-\\Omega/2, +\\Omega/2]$ and discrete frequency $\\omega_m = m \\Delta \\omega$ ($m=-M/2, \\cdots, M/2$) where $\\Delta \\omega  = \\Omega/M$, the inverse transform (\\ref{eq:fourier_inv}) is expressed as a numerical integral\n",
     "\n",
     "$$\n",
@@ -38,16 +38,16 @@
     "\\tilde{f}(\\omega_k) = \\frac{1}{2\\pi} \\sum_{n=-N/2}^{N/2}\\quad \\sum_{m=-M/2}^{M/2} \\tilde{f}(\\omega_m) e^{-i (m-k) n \\Delta \\omega \\Delta t} \\Delta \\omega \\Delta t.\n",
     "$$\n",
     "\n",
-    "These equations hold simultaneously  if $N=M$ and $\\Delta \\omega \\Delta t = 2\\pi/N$.  Commonly, $\\Delta t = T/N$ and $\\Delta \\omega = 2\\pi /T$ are used. The bound of $\\omega$ is now $\\Omega=2\\pi N/T$.  Considering the periodicity of the exponential function, the bound of the summation $(-N/2,N/2-1)$ may be shifted to $(0,N-1)$. \n",
+    "These equations hold simultaneously  if $N=M$ and $\\Delta \\omega \\Delta t = 2\\pi/N$.  Commonly, $\\Delta t = T/N$ and $\\Delta \\omega = 2\\pi /T$ are used. The bound of $\\omega$ is now $\\Omega=2\\pi N/T$. \n",
     "\n",
     "In practice, the choice of $T$ is sometime tricky.  Normally, we choose $T$ such that $f(T/2) \\approx 0$ and $N$ such that the resolution $\\Delta t=T/N$ is small enough.  However, we also need a reasonable resolution of frequency $\\Delta\\omega=2\\pi/T$.  If $T$ is too small, the resolution of the frequency becomes poor.  Therefore, a larger $T$ is better for the frequency.  On the other hand, if $T$ is large, $N$ has to be large so that the resolution of time is small enough. We will see an example below.\n",
     "\n",
-    "In summary, the discrete version of Fourier transforms (DFT) are defined by\n",
+    "Considering the periodicity of the exponential function, the bound of the summation $(-N/2,N/2-1)$ may be shifted to $(0,N-1)$. In summary, the discrete version of Fourier transforms (DFT) are defined by\n",
     "\n",
     "$$\n",
     "\\begin{eqnarray}\n",
-    "\\tilde{f}_m &=& T \\left ( \\frac{1}{N}\\sum_{n=0}^{N-1} f_n\\, e^{2 \\pi i m n / N} \\right )\\label{eq:DFT_fwd2}\\\\\n",
-    "f_n &=& \\frac{1}{T} \\left ( \\sum_{m=0}^{N-1} \\tilde{f}_m\\, e^{- 2 \\pi i n m /N} \\right )\\label{eq:DFT_inv2}\n",
+    "\\tilde{f}_m &=& T \\left ( \\frac{1}{N}\\sum_{n=0}^{N-1} f_n\\, e^{2 \\pi i m n / N} \\right )\\\\\n",
+    "f_n &=& \\frac{1}{T} \\left ( \\sum_{m=0}^{N-1} \\tilde{f}_m\\, e^{- 2 \\pi i n m /N} \\right )\n",
     "\\end{eqnarray}\n",
     "$$(eq:DFT)\n",
     "\n",
@@ -116,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
