--- a/fft/fourie-theorem.ipynb
+++ b/fft/fourie-theorem.ipynb
@@ -17,7 +17,7 @@
     "The Fourier theorem states that\n",
     "\n",
     "$$\n",
-    "f(t) = \\frac{1}{2\\pi} \\int_{-\\infty}^\\infty \\int_{-\\infty}^{\\infty} f(t^\\prime)\\, e^{i\\omega(t^\\prime-t)} d{t}^\\prime  d{\\omega} .\n",
+    "f(t) = \\frac{1}{2\\pi} \\int_{-\\infty}^\\infty \\int_{-\\infty}^{\\infty} f(t^\\prime)\\, e^{i\\omega(t^\\prime-t)} dt^\\prime  d\\omega .\n",
     "$$(eq:fourier_theorem)\n",
     "\n",
     "where the function $f(\\cdot)$ in the right hand sides is the same function in the left hand side.  You can express this theorem in two separate integrals.  First, we extract the integral with respect to $t^\\prime$ from Eq. {eq}`eq:fourier_theorem` and define  a new function\n",
@@ -32,7 +32,7 @@
     "f(t) = \\frac{1}{2\\pi} \\int_{-\\infty}^\\infty \\tilde{f}(\\omega)\\, e^{-i\\omega t}\\, d{\\omega} .\n",
     "$$(eq:fourier_inv)\n",
     "\n",
-    "Equations {eq}`eqfourier_fwd` and {eq}`eq:fourier_inv` are commonly called forward and inverse Fourier transform, respectively.\n",
+    "Equations {eq}`eq:fourier_fwd` and {eq}`eq:fourier_inv` are commonly called forward and inverse Fourier transform, respectively.\n",
     "In Physics $t$ and $\\omega$ indicate time and angular frequency.  The forward transformation changes the function from the time domain to the frequency domain. There is some confusion regarding the sign on the exponential function.  If $\\omega$ in Eq {eq}`eq:fourier_theorem` is replaced with $-\\omega$, the theorem still holds.  That means we could call Eq.{eq}`eq:fourier_inv` forward transformation and Eq. {eq}`eq:fourier_fwd` inverse transformation.  In fact,\n",
     "when we use position $x$ in place of $t$ and wave number $k$ in place of $\\omega$, we use the opposite convention of the sign\n",
     "  \n",
@@ -45,7 +45,9 @@
     "\n",
     "This expression is more convenient in physics because a traveling wave is mathematically expressed by  $e^{i(k x - \\omega t)}$ where spacial and time domains have the opposite sign.\n",
     "\n",
-    "Mathematically speaking, however, $t$ and $\\omega$ are just two different variables.  Apart from the prefactor $1/2\\pi$ and the sign of $\\omega$ in the exponential function, the two integrals have the identical form. $\\tilde{f}(\\omega)$ is  Fourier transform of $f(t)$ and $f(t)$ is Fourier transform of $\\tilde{f}(\\omega)$.  It does not make a sense to call one as forward and the other as inverse. In mathematics literature, the Fourier transform is often defined by\n",
+    "Mathematically speaking, however, $t$ and $\\omega$ are just two different variables.  Apart from the prefactor $1/2\\pi$ and the sign of $\\omega$ in the exponential function, the two integrals have the identical form. $\\tilde{f}(\\omega)$ is  Fourier transform of $f(t)$ and in turn $f(t)$ is Fourier transform of $\\tilde{f}(\\omega)$.  It does not make a sense to call one as forward and the other as inverse. \n",
+    "\n",
+    "Furthermore, there is no reason to place prefactor $1/2\\pi$ in one transformation.   The following symmetric expression is mathematically more preferred:\n",
     "\n",
     "$$\n",
     "\\begin{eqnarray}\n",
@@ -54,9 +56,9 @@
     "\\end{eqnarray}\n",
     "$$(eq:fourier_symmetric)\n",
     "\n",
-    "so that the same prefactor appears in both transformation.\n",
+    "Note that the same prefactor appears in both transformation and yet this definition still satisfies the Fourier theorem {eq}`eq:fourier_theorem`.\n",
     "\n",
-    "In some community, yet another expression  \n",
+    "In some communities, yet another expression  \n",
     "\n",
     "$$\n",
     "\\tilde{f}(\\omega) = \\int_{-\\infty}^{\\infty} f(t^\\prime)\\, e^{2 \\pi i f t^\\prime}\\, dt^\\prime\n",
@@ -108,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
