--- a/references/references.bib
+++ b/references/references.bib
@@ -173,4 +173,31 @@
   doi     = {10.26717/BJSTR.2022.47.007440 PDF},
 }
 
+@TechReport{Frigo1997,
+  author      = {Frigo, Matteo and Johnson, Steven~G.},
+  institution = {Massachusetts Institute of Technology},
+  title       = {The Fastest {Fourier} Transform in the West},
+  year        = {1997},
+  month       = {September},
+  note        = {The source codes and manuals are available at \texttt{http://www.fftw.org/}.},
+  number      = {MIT-LCS-TR-728},
+}
+
+@Article{Cooley1965,
+  author  = {Cooley, James W., and Tukey, John W.},
+  title   = {An algorithm for the machine calculation of complex Fourier series},
+  journal = {Math Comput},
+  year    = {1965},
+  volume  = {19},
+  pages   = {297--301},
+}
+
+@Book{Press2007,
+  author    = {Press, William H. and Teukolsky, Saul A. and Vetterling, William T. and Flannery, Brian P.},
+  publisher = {Cambridge University Press},
+  title     = {Numerical Recipes: The Art of Scientific Computing},
+  year      = {2007},
+  edition   = {3rd},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
