fft subsection completed.

--- a/fft/intro.ipynb
+++ b/fft/intro.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "Suppose that we have a time-dependent signal $s(t)$ where $t$ is time.  We wwant to analyze the signal and find a characteristic feature.  Fourier analysis is one of the most popular mathematical approach.  It has been widely used in engineering, science, mathematics, information theory, image processing, stock market, and more. The analysis is based on Fourier transform, which we study in this chapter.\n",
     "\n",
-    "First, we review Fourier theorem, on which the Fourier analysis based.  In the folloing secvtion, we develop a discrete version of Fourier theorem suitable for digital computation. Then, we introduce a very efficient numerical algorithm to compute the discrete Fourier transform known as Fast Fourier Transform (FFT)."
+    "As usual, we begin with some mathematical preperation. First, we review Fourier theorem, on which the Fourier analysis based.  In the folloing secvtion, we develop a discrete version of Fourier theorem suitable for digital computation. Then, we introduce a very efficient numerical algorithm to compute the discrete Fourier transform known as Fast Fourier Transform (FFT)."
    ]
   },
   {
@@ -53,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
