minor update of fft

--- a/fft/fft.ipynb
+++ b/fft/fft.ipynb
@@ -223,7 +223,7 @@
     "\\tilde{f}(\\omega) = \\frac{1}{\\sqrt{\\pi}} \\int_{-\\infty}^\\infty e^{-t^2} e^{i \\omega t} d{t}  = e^{-\\omega^2/4}\n",
     "$$\n",
     "\n",
-    "where $\\omega$ is frequency.\n",
+    "where $\\omega$ is frequency.  In this example, both $f(t)$ and $\\tilde{f}(\\omega)$ are real.  This is due to the symmetry $f(t)=f(-t)$.\n",
     "\n",
     "First, we have to decide the parameter values. $T=50$ and $N=1024=2^{10}$ makes time resolution $\\Delta t \\approx 0.05$ fine enough. The function value at the bound $f(\\pm T/2) \\approx 10^{-272}$ seems unnecessarily too small.  A smaller $T$ could be used.  However, the resolution of the frequency is $\\Delta \\omega = 2\\pi/T \\approx 0.1$, barely small enough.  Therefore, we cannot reduce $T$.\n",
     "\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "19c7061a-57fe-403f-b017-f25f2bbaf967",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "5ae639f3-d06d-4891-97ea-ab27ec5bed4f",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "36f194bc-d226-4e14-af19-b204515bd6fb",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "c49b9c25-b9c7-4e46-bd9f-18d628d7e3ed",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,6 @@
     "plt.plot(t1,f1,'-r',label=r'shifted function',linewidth=2)\n",
     "plt.plot([0,0],[0,1],'--k')\n",
     "plt.plot([T,T],[0,1],'--')\n",
-    "#plt.axis([-T/2*1.05, T*1.05, 0.0, 1.0])\n",
     "plt.legend(loc=1)\n",
     "plt.xlabel(r'$t$',fontsize=14)\n",
     "plt.ylabel(r'$f(t)$',fontsize=14)\n",
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "27f29e95-1540-4980-9e74-7461a2c9a0a8",
    "metadata": {},
    "outputs": [
@@ -403,6 +402,8 @@
     "g1=np.fft.ifft(f1)*T  # do not forget to multiply T\n",
     "\n",
     "plt.figure(figsize=(4,4))\n",
+    "# Fourier transform is complex in general even when input is real\n",
+    "# In the current example, the fourier transform is expected to be real.\n",
     "plt.plot(w1,np.real(g1),'-r',label=r'raw output',linewidth=2)\n",
     "plt.plot([0,0],[0,1],'--k')\n",
     "plt.plot([W,W],[0,1],'--')\n",
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "475b9db7-cf03-48c5-a4f5-37baebd72bbd",
    "metadata": {},
    "outputs": [
@@ -463,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "8cda6d32-234d-4083-938e-1d0c07fcd588",
    "metadata": {},
    "outputs": [
@@ -484,7 +485,7 @@
     "\n",
     "plt.figure(figsize=(4,4))\n",
     "plt.plot(w0,g0,'-or',label='FFT',linewidth=2)\n",
-    "plt.plot(w0,g2,'-k',label='Exact',linewidth=2)\n",
+    "plt.plot(w0,np.real(g2),'-k',label='Exact',linewidth=2)\n",
     "plt.xlim([-10,10])\n",
     "plt.ylim([0,1.3])\n",
     "plt.legend(loc=1)\n",
