--- a/fft/fourie-theorem.ipynb
+++ b/fft/fourie-theorem.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "To begin with, let us review the definition and some properties of Fourier transform.\n",
-    "The Fourier theorem states that\n",
+    "For a complex-valued function $f(x)$, the Fourier theorem states that\n",
     "\n",
     "$$\n",
     "f(t) = \\frac{1}{2\\pi} \\int_{-\\infty}^\\infty \\int_{-\\infty}^{\\infty} f(t^\\prime)\\, e^{i\\omega(t^\\prime-t)} dt^\\prime  d\\omega .\n",
@@ -32,7 +32,8 @@
     "f(t) = \\frac{1}{2\\pi} \\int_{-\\infty}^\\infty \\tilde{f}(\\omega)\\, e^{-i\\omega t}\\, d{\\omega} .\n",
     "$$(eq:fourier_inv)\n",
     "\n",
-    "Equations {eq}`eq:fourier_fwd` and {eq}`eq:fourier_inv` are commonly called forward and inverse Fourier transform, respectively.\n",
+    "Equations {eq}`eq:fourier_fwd` and {eq}`eq:fourier_inv` are commonly called forward and inverse Fourier transform, respectively.  Notice that even when $f(x)$ is a real-valued function, its Fourier transform $\\tilde{f}(x)$ is not necessarily real.\n",
+    "\n",
     "In Physics $t$ and $\\omega$ indicate time and angular frequency.  The forward transformation changes the function from the time domain to the frequency domain. There is some confusion regarding the sign on the exponential function.  If $\\omega$ in Eq {eq}`eq:fourier_theorem` is replaced with $-\\omega$, the theorem still holds.  That means we could call Eq.{eq}`eq:fourier_inv` forward transformation and Eq. {eq}`eq:fourier_fwd` inverse transformation.  In fact,\n",
     "when we use position $x$ in place of $t$ and wave number $k$ in place of $\\omega$, we use the opposite convention of the sign\n",
     "  \n",
