--- a/derivative/step_adaptation.ipynb
+++ b/derivative/step_adaptation.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "b1d624aa-691b-4196-8967-eda284292be4",
    "metadata": {
     "tags": []
@@ -154,9 +154,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jbook",
+   "display_name": "book",
    "language": "python",
-   "name": "jbook"
+   "name": "book"
   },
   "language_info": {
    "codemirror_mode": {
@@ -168,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
