--- a/fft/dft.ipynb
+++ b/fft/dft.ipynb
@@ -102,9 +102,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jbook",
+   "display_name": "book",
    "language": "python",
-   "name": "jbook"
+   "name": "book"
   },
   "language_info": {
    "codemirror_mode": {
@@ -116,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
